--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/plugin-proposal-decorators": "^7.3.0",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-react": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.0.0",
     "@hot-loader/react-dom": "^16.13.0",
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
     "argparse": "^1.0.10",
     "awesomplete": "^1.1.2",
     "babel-loader": "^8.0.4",
@@ -85,6 +87,7 @@
     "html-webpack-plugin": "^4.3.0",
     "i18next": "^19.3.2",
     "i18next-resource-store-loader": "^0.1.2",
+    "immutable": "^4.0.0-rc.12",
     "json-loader": "^0.5.1",
     "leaflet": "^1.6.0",
     "leaflet-gesture-handling": "^1.1.8",
@@ -102,6 +105,8 @@
     "query-string": "^4.2.3",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.0",
+    "react-data-grid": "5.0.1",
+    "react-data-grid-addons": "5.0.4-2",
     "react-dom": "^16.8.6",
     "react-ga": "^2.2.0",
     "react-helmet": "^5.2.1",
@@ -121,9 +126,9 @@
     "styled-components": "^4.0.3",
     "typeface-lato": "^0.0.75",
     "webpack": "^4.30.0",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-chunk-hash": "^0.6.0",
     "webpack-cli": "^3.1.2",
-    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.24.3",
     "whatwg-fetch": "^0.10.1",
